# IFJ

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.c  ast.h  code_generator.c  code_generator.h  dynamic_string.c  dynamic_string.h  enums.h  error_codes.h  expr-parser.c  expr-parser.h  expr_parser.c  expr_parser.h  helpers.c  helpers.h  linked_list.c  linked_list.h  main.c  parser.c  parser.h  rozdeleni  run_tests.sh  scanner.c  scanner.h  semantic_analysis.c  semantic_analysis.h  stack.c  stack.h  symtable.c  symtable.h  test.txt  test_input.txt  testing_utils.c  testing_utils.h  tests.py
.github/workflows/: build.yml
include/: ast.h  code_generator.h  enums.h  error_codes.h  expr_parser.h  helpers.h  linked_list.h  stack.h
src/: code_generator.c  dynamic_string.c  linked_list.c  main.c  scanner.c  semantic_analysis.c  stack.c  symtable.c
tests/: expr_test.txt  expr_test_incorrect.txt  expr_test_varied.txt  invalid?_int_overflow.ifjx  invalid?_zero_division.ifjx  invalid_missing_main_3.ifj  invalid_recursive_factorial_2.ifj  invalid_redefinition_5.ifj  invalid_unused_var_9.ifj  test_symtable.c  valid_long_program_0.ifj  valid_nested_scopes_0.ifj  valid_null_handling_0.ifj  valid_string_operations_0.ifj
tests/fixtures/expressions/: expr_test_correct.txt  expr_test_ultra.txt
tests/fixtures/programs/: invalid_function_params_4.ifj  invalid_missing_semicolon_2.ifj  invalid_type_mismatch_7.ifj  valid_iterative_factorial_0.ifj  valid_main_0.ifj
tests/unit/: test_semantic.c  test_symtable.c
